# telegramircrr

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  config.yaml  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: indexer-integration-request.md
.github/workflows/: docker-publish.yml  tag-on-version-bump.yml  uv-lock-sync.yml
src/: log_config.py  main.py
src/indexers/: emuwarez.py  hdzero.py  milnueve.py  nobs.py  parabellumhd.py  torrentland.py
src/irc_bot/: ircbot.py  utils.py
src/mappers/: indexer_mapper.py  tracker_mapper.py
src/models/: announce_data.py  torrent_data.py
src/trackers/: emuwarez.py  hdzero.py  nobs.py
